syntax = "proto3";

package yandex.cloud.priv.disk_manager.v1;

import "google/protobuf/empty.proto";
import "yandex/cloud/api/operation.proto";
import "yandex/cloud/priv/operation/operation.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/api/yandex/cloud/priv/disk_manager/v1;disk_manager";

service FilesystemService {
    rpc Create(CreateFilesystemRequest) returns (operation.Operation) {
        option (yandex.cloud.api.operation) = {
            response: "google.protobuf.Empty"
        };
    }

    rpc Delete(DeleteFilesystemRequest) returns (operation.Operation) {
        option (yandex.cloud.api.operation) = {
            metadata: "DeleteFilesystemMetadata"
            response: "google.protobuf.Empty"
        };
    }

    rpc Resize(ResizeFilesystemRequest) returns (operation.Operation) {
        option (yandex.cloud.api.operation) = {
            response: "google.protobuf.Empty"
        };
    }

    rpc DescribeModel(DescribeFilesystemModelRequest) returns (FilesystemModel) {}
}

enum FilesystemStorageKind {
    FILESYSTEM_STORAGE_KIND_UNSPECIFIED = 0;
    FILESYSTEM_STORAGE_KIND_HDD = 1;
    FILESYSTEM_STORAGE_KIND_SSD = 2;
}

message FilesystemId {
    string zone_id = 1;
    string filesystem_id = 2;
}

message FilesystemPerformanceProfile {
    int64 max_read_bandwidth = 1;
    int64 max_read_iops = 2;
    int64 max_write_bandwidth = 3;
    int64 max_write_iops = 4;
}

message FilesystemModel {
    int64 block_size = 1;
    int64 size = 2;
    int64 channels_count = 3;
    FilesystemStorageKind storage_kind = 4;
    FilesystemPerformanceProfile performance_profile = 5;
}

message CreateFilesystemRequest {
    FilesystemId filesystem_id = 1;
    string cloud_id = 2;
    string folder_id = 3;
    int64 block_size = 4;
    int64 size = 5;
    FilesystemStorageKind storage_kind = 6;
}

message DeleteFilesystemRequest {
    FilesystemId filesystem_id = 1;
}

message DeleteFilesystemMetadata {
    FilesystemId filesystem_id = 1;
}

message ResizeFilesystemRequest {
    FilesystemId filesystem_id = 1;
    int64 size = 2;
}

message DescribeFilesystemModelRequest {
    string zone_id = 1;
    int64 block_size = 2;
    int64 size = 3;
    FilesystemStorageKind storage_kind = 4;
}
